Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3385

missing permission lock check in ll_have_md_lock.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.1, Lustre 2.5.0
    • None
    • None
    • 3
    • 8384

      In ll_have_md_lock, it check the lock with

      for (i = 0; i < MDS_INODELOCK_MAXSHIFT && *bits != 0; i++)

      { ........ }

      So the last bit(PERM) of INODELOCK is missing from the check.

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: